<resources>
    <string name="app_name">Instadam</string>
    <string name="home">Inicio</string>
    <string name="search">Buscar</string>
    <string name="message">Mensajes</string>
    <string name="profile">Mi perfil</string>
    <string name="nombre_cientifico">Nombre cientifico:</string>
    <string name="nombre_comun">Nombre común:</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="ver_comentarios">Ver comentarios</string>
    <string name="settings">Configuración</string>
    <string name="filtrar">Filtrar</string>
    <string name="compendio">Compendio</string>
    <string name="seguidores">Seguidores</string>
    <string name="seguidos">Seguidos</string>
    <string name="login_usarname_hint">Correo electrónico o usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="split_o">O</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo">Correo electrónico</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="confirmar_contrasenia">Confirmar contraseña</string>
    <string-array name="Idioma">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>
    <string name="error_pwd">Las contraseñas no coinciden</string>
    <string name="rellena_campos">Rellena todos los campos</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="ajustes">Ajustes</string>
    <string name="login_error">Contraseña o usuario invalidos</string>
    <string name="username_error">Nombre de usuario no disponible</string>
    <string name="email_error">Correo electrónico ya registrado</string>
    <string name="recuerdame">Recuérdame</string>
    <string name="descripcion">Descripción</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="cambiar_nombre_de_usuario">Cambiar nombre de usuario</string>
    <string name="cambiar_email">Cambiar email</string>
    <string name="descripcion_hint">¡Habla sobre ti!</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="rellena_todos_los_campos">Rellena todos los campos</string>
    <string name="email_regex">No es un formato de correo válido</string>
    <string name="buscar_usuario">Buscar usuario</string>
    <string name="seguir">Seguir</string>
    <string name="siguiendo">Siguiendo</string>
    <string name="firebase_error_upload">No se ha podido subir la imagen a la nube</string>
    <string name="firebase_success_upload">Imagen publicada correctamente</string>
    <string name="cambios_guardados">Cambios guardados</string>
    <string name="haz_selecciona_foto">Haz o selecciona una foto para publicar</string>
    <string name="escribir_titulo">Escribe un título</string>
    <string name="input_nombre_cientifico">¿Cuál es su nombre científico?</string>
    <string name="input_nombre_comun">¿Cuál es su nombre común?</string>
    <string name="post_descripcion">¿Quiéres escribir algo más?</string>
    <string name="publicar">Publicar</string>
    <string-array name="post_type_list" translatable="false">
        <item>Fungi</item>
        <item>Plantae</item>
        <item>Animalia</item>
    </string-array>
    <string name="title_error">Escribe un título</string>
    <string name="enviar_mensaje">Enviar mensaje</string>
    <string name="mensaje">Mensaje</string>
    <string name="you">Tú</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="modo_oscuro">Modo oscuro</string>
</resources>