<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/aniadirFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:focusable="true"
            android:src="@drawable/add"
            app:backgroundTint="?attr/colorAccent"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="?attr/colorPrimaryDark"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/plantaeFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:src="@drawable/ic_plantae"
            android:visibility="invisible"
            app:backgroundTint="?attr/colorAccent"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/animaliaFab"
            app:layout_constraintEnd_toEndOf="@+id/animaliaFab"
            app:tint="?attr/colorPrimaryDark"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fungiFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:src="@drawable/ic_fungi"
            android:visibility="invisible"
            app:backgroundTint="?attr/colorAccent"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/plantaeFab"
            app:layout_constraintEnd_toEndOf="@+id/plantaeFab"
            app:tint="?attr/colorPrimaryDark"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/animaliaFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:focusable="true"
            android:src="@drawable/ic_animalia"
            android:visibility="invisible"
            app:backgroundTint="?attr/colorAccent"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/aniadirFab"
            app:layout_constraintEnd_toEndOf="@+id/aniadirFab"
            app:tint="?attr/colorPrimaryDark"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fgt_profile_userIImgV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="100dp"
                    android:maxHeight="100dp"
                    android:minWidth="100dp"
                    android:minHeight="100dp"
                    android:src="@drawable/account_circle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fgt_profile_userameTxtView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Galancho_"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/seguidosLinearLyt"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/seguidos"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/seguidosTxtV"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="26"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/seguidoresLinearLyt"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/seguidores"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/seguidoresTxtV"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="6"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/compendioLinearLyt"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/compendio"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/compendioTxtV"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="18"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/editProfileBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/editar_perfil" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fgt_profile_rv"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <View
            android:id="@+id/shadow_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/shadow"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>